# remote_sensor_data_server

./: .gitignore  Cargo.toml
client/: .gitignore  Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
sensor/: Cargo.toml  Embed.toml  memory.x
sensor/.cargo/: config.toml
sensor/src/: main.rs
server/: .gitignore  Cargo.toml
server/src/: http_server.rs  main.rs  tcp_server.rs
server/src/http_server/: users.rs
src/: http_server.rs  main.rs
