[package]
name = "sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { version ="0.22.1", default-features = false }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
microbit-v2 = "0.15.1"
panic-halt = "1.0.0"
rtt-target = "0.6.1"

